fixed issues when displaying on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 .main_content{
   padding-left: 200px;
   padding-right: 200px;
+  
 }
 
 
@@ -310,12 +311,14 @@ label{
 
   h3 span{
 
-    padding-left: 70px;
-    padding-right: 70px;
-
+    padding-left: 5px;
+    padding-right: 5px;
 
   }
 
+body{
+  padding: 0;
+}
 
 .main_content{
   padding: 7px;
@@ -347,9 +350,9 @@ label{
   }
 
     .search-bar input[type=text]{
-    right: 15px;
+    right: 8px;
     width: 0px;
-    top: 155px;
+    top: 130px;
     margin-top: -10px;
 
   }
